# supra-from-scratch

./: .gitignore  README.md  airdrop.py  check_balance.py  check_block.py  check_transaction.py  create_multisig_account.py  derive_keys.py  encrypt_mnemonic.py  execute_multisig_tx.py  gen_mnemonic.py  gen_mnemonic_fido2.py  multisig_auth.py  propose_multisig_tx.py  scan_blocks.py  transaction_payload.py  transfer_supra.py  view_multisig_tx.py  vote_multisig_tx.py
rpc_server/: Cargo.toml
rpc_server/.cargo/: config.toml
rpc_server/benches/: chain_id.rs  chain_id_benchmark.rs  submit_transaction.rs  transaction_validation.rs
rpc_server/src/: error.rs  genesis.rs  lib.rs  main.rs  move_executor.rs  move_store.rs  state.rs  transaction.rs
